--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ button {
   appearance: none;
   background: rgba(0, 0, 0, 0.8);
   color: white;
-  border: 2px solid black;
+  border: none;
   border-radius: 4px;
   font-family: var(--font-stack);
   font-size: var(--font-size);
@@ -39,12 +39,12 @@ button {
 }
 
 button.secondary {
-  background: white;
+  background: orange;
   color: black;
 }
 
 button.tertiary {
-  background: white;
+  background: pink;
   color: black;
 }
 
@@ -52,13 +52,6 @@ button.modal {
   background: white;
   color: black;
   padding: 0.25rem;
-}
-
-button.share {
-  margin: 0 auto;
-  background: orange;
-  color: white;
-  font-size: 14px;
 }
 
 .drawer {
