--- a/style.css
+++ b/style.css
@@ -24,6 +24,12 @@ body {
   touch-action: manipulation;
 }
 
+textarea {
+  resize: none;
+  outline: none;
+  overflow: auto;
+}
+
 button {
   margin: 0;
   padding: 0.25rem 0.5rem;
@@ -65,8 +71,8 @@ button.modal {
   justify-content: center;
   align-items: center;
   opacity: 0;
-  transform: scale3d(0, 0, 0);
-  transition: opacity 0.1s 0.2s linear, transform 0.5s ease-in-out;
+  transform: scale3d(0.9, 0.9, 0.9);
+  transition: opacity 0s 0.2s linear, transform 0.1s 0.3s ease-in-out;
   pointer-events: none;
 }
 
