--- a/style.css
+++ b/style.css
@@ -71,8 +71,9 @@ button.modal {
   justify-content: center;
   align-items: center;
   opacity: 0;
-  transform: scale3d(0.9, 0.9, 0.9);
-  transition: opacity 0s 0.2s linear, transform 0.1s 0.3s ease-in-out;
+  transform: scale3d(0.75, 0.75, 0.75);
+  transition: opacity 0.2s ease-in-out,
+    transform 0.5s cubic-bezier(0.16, 1, 0.3, 1);
   pointer-events: none;
 }
 
